// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/System/License/ImportLicenseModal render snap when change license file success 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal basic-modal-wrapper css-vvpsbb"
          role="dialog"
          style="width: 1000px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                导入许可信息
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal"
              >
                <div
                  class="ant-form-item ant-form-item-has-success"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="file"
                        title="License文件"
                      >
                        License文件
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-upload-wrapper"
                          >
                            <div
                              class="ant-upload ant-upload-select"
                            >
                              <span
                                class="ant-upload"
                                role="button"
                                tabindex="0"
                              >
                                <input
                                  accept=""
                                  aria-required="true"
                                  id="file"
                                  style="display: none;"
                                  type="file"
                                />
                                <button
                                  class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                                  type="button"
                                >
                                  <span>
                                    选择文件上传
                                  </span>
                                </button>
                              </span>
                            </div>
                            <div
                              class="ant-upload-list ant-upload-list-text"
                            >
                              <div
                                class="ant-upload-list-item-container"
                              >
                                <div
                                  class="ant-upload-list-item ant-upload-list-item-undefined"
                                >
                                  <div
                                    class="ant-upload-icon"
                                  >
                                    <span
                                      aria-label="paper-clip"
                                      class="anticon anticon-paper-clip"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="paper-clip"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="64 64 896 896"
                                        width="1em"
                                      >
                                        <path
                                          d="M779.3 196.6c-94.2-94.2-247.6-94.2-341.7 0l-261 260.8c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0012.7 0l261-260.8c32.4-32.4 75.5-50.2 121.3-50.2s88.9 17.8 121.2 50.2c32.4 32.4 50.2 75.5 50.2 121.2 0 45.8-17.8 88.8-50.2 121.2l-266 265.9-43.1 43.1c-40.3 40.3-105.8 40.3-146.1 0-19.5-19.5-30.2-45.4-30.2-73s10.7-53.5 30.2-73l263.9-263.8c6.7-6.6 15.5-10.3 24.9-10.3h.1c9.4 0 18.1 3.7 24.7 10.3 6.7 6.7 10.3 15.5 10.3 24.9 0 9.3-3.7 18.1-10.3 24.7L372.4 653c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0012.7 0l215.6-215.6c19.9-19.9 30.8-46.3 30.8-74.4s-11-54.6-30.8-74.4c-41.1-41.1-107.9-41-149 0L463 364 224.8 602.1A172.22 172.22 0 00174 724.8c0 46.3 18.1 89.8 50.8 122.5 33.9 33.8 78.3 50.7 122.7 50.7 44.4 0 88.8-16.9 122.6-50.7l309.2-309C824.8 492.7 850 432 850 367.5c.1-64.6-25.1-125.3-70.7-170.9z"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                  <span
                                    class="ant-upload-list-item-name"
                                    title="test.txt"
                                  >
                                    test.txt
                                  </span>
                                  <span
                                    class="ant-upload-list-item-actions"
                                  >
                                    <button
                                      class="ant-btn ant-btn-text ant-btn-sm ant-btn-icon-only ant-upload-list-item-action"
                                      title="删除文件"
                                      type="button"
                                    >
                                      <span
                                        class="ant-btn-icon"
                                      >
                                        <span
                                          aria-label="delete"
                                          class="anticon anticon-delete"
                                          role="img"
                                          tabindex="-1"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="delete"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </button>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
              <div
                class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  >
                    <div
                      class="ant-table ant-table-empty ant-table-scroll-horizontal"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="min-width: 100%; table-layout: auto;"
                          >
                            <colgroup />
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  名称
                                </th>
                                <th
                                  class="ant-table-cell ellipsis-column-width"
                                  scope="col"
                                >
                                  限制
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-placeholder"
                              >
                                <td
                                  class="ant-table-cell"
                                  colspan="2"
                                >
                                  <div
                                    class="ant-table-expanded-row-fixed"
                                    style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                  />
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
                type="button"
              >
                <span>
                  提 交
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/License/ImportLicenseModal render snap when change license file success 2`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal basic-modal-wrapper css-vvpsbb"
          role="dialog"
          style="width: 1000px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                导入许可信息
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal"
              >
                <div
                  class="ant-form-item ant-form-item-has-success"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="file"
                        title="License文件"
                      >
                        License文件
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-upload-wrapper"
                          >
                            <div
                              class="ant-upload ant-upload-select"
                            >
                              <span
                                class="ant-upload"
                                role="button"
                                tabindex="0"
                              >
                                <input
                                  accept=""
                                  aria-required="true"
                                  id="file"
                                  style="display: none;"
                                  type="file"
                                />
                                <button
                                  class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                                  type="button"
                                >
                                  <span>
                                    选择文件上传
                                  </span>
                                </button>
                              </span>
                            </div>
                            <div
                              class="ant-upload-list ant-upload-list-text"
                            >
                              <div
                                class="ant-upload-list-item-container"
                              >
                                <div
                                  class="ant-upload-list-item ant-upload-list-item-undefined"
                                >
                                  <div
                                    class="ant-upload-icon"
                                  >
                                    <span
                                      aria-label="paper-clip"
                                      class="anticon anticon-paper-clip"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="paper-clip"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="64 64 896 896"
                                        width="1em"
                                      >
                                        <path
                                          d="M779.3 196.6c-94.2-94.2-247.6-94.2-341.7 0l-261 260.8c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0012.7 0l261-260.8c32.4-32.4 75.5-50.2 121.3-50.2s88.9 17.8 121.2 50.2c32.4 32.4 50.2 75.5 50.2 121.2 0 45.8-17.8 88.8-50.2 121.2l-266 265.9-43.1 43.1c-40.3 40.3-105.8 40.3-146.1 0-19.5-19.5-30.2-45.4-30.2-73s10.7-53.5 30.2-73l263.9-263.8c6.7-6.6 15.5-10.3 24.9-10.3h.1c9.4 0 18.1 3.7 24.7 10.3 6.7 6.7 10.3 15.5 10.3 24.9 0 9.3-3.7 18.1-10.3 24.7L372.4 653c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0012.7 0l215.6-215.6c19.9-19.9 30.8-46.3 30.8-74.4s-11-54.6-30.8-74.4c-41.1-41.1-107.9-41-149 0L463 364 224.8 602.1A172.22 172.22 0 00174 724.8c0 46.3 18.1 89.8 50.8 122.5 33.9 33.8 78.3 50.7 122.7 50.7 44.4 0 88.8-16.9 122.6-50.7l309.2-309C824.8 492.7 850 432 850 367.5c.1-64.6-25.1-125.3-70.7-170.9z"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                  <span
                                    class="ant-upload-list-item-name"
                                    title="test.txt"
                                  >
                                    test.txt
                                  </span>
                                  <span
                                    class="ant-upload-list-item-actions"
                                  >
                                    <button
                                      class="ant-btn ant-btn-text ant-btn-sm ant-btn-icon-only ant-upload-list-item-action"
                                      title="删除文件"
                                      type="button"
                                    >
                                      <span
                                        class="ant-btn-icon"
                                      >
                                        <span
                                          aria-label="delete"
                                          class="anticon anticon-delete"
                                          role="img"
                                          tabindex="-1"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="delete"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </button>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
              <div
                class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-empty ant-table-scroll-horizontal"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="min-width: 100%; table-layout: auto;"
                          >
                            <colgroup />
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  名称
                                </th>
                                <th
                                  class="ant-table-cell ellipsis-column-width"
                                  scope="col"
                                >
                                  限制
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-placeholder"
                              >
                                <td
                                  class="ant-table-cell"
                                  colspan="2"
                                >
                                  <div
                                    class="ant-table-expanded-row-fixed"
                                    style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                  />
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                disabled=""
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary ant-btn-loading basic-button-wrapper css-lfzis8"
                type="button"
              >
                <span
                  class="ant-btn-icon ant-btn-loading-icon"
                >
                  <span
                    aria-label="loading"
                    class="anticon anticon-loading anticon-spin"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="loading"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                  提 交
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/License/ImportLicenseModal render snap when change license file success 3`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal basic-modal-wrapper css-vvpsbb"
          role="dialog"
          style="width: 1000px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                导入许可信息
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal"
              >
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="file"
                        title="License文件"
                      >
                        License文件
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-upload-wrapper"
                          >
                            <div
                              class="ant-upload ant-upload-select"
                            >
                              <span
                                class="ant-upload"
                                role="button"
                                tabindex="0"
                              >
                                <input
                                  accept=""
                                  aria-required="true"
                                  id="file"
                                  style="display: none;"
                                  type="file"
                                />
                                <button
                                  class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                                  type="button"
                                >
                                  <span>
                                    选择文件上传
                                  </span>
                                </button>
                              </span>
                            </div>
                            <div
                              class="ant-upload-list ant-upload-list-text"
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
              <div
                class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-empty ant-table-scroll-horizontal"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="min-width: 100%; table-layout: auto;"
                          >
                            <colgroup />
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  名称
                                </th>
                                <th
                                  class="ant-table-cell ellipsis-column-width"
                                  scope="col"
                                >
                                  限制
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-placeholder"
                              >
                                <td
                                  class="ant-table-cell"
                                  colspan="2"
                                >
                                  <div
                                    class="ant-table-expanded-row-fixed"
                                    style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                  />
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
                type="button"
              >
                <span>
                  提 交
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-message ant-message-top"
    style="left: 50%; transform: translateX(-50%); top: 8px;"
  >
    <div
      class="ant-message-notice ant-message-notice-success"
    >
      <div
        class="ant-message-notice-content"
      >
        <div
          class="ant-message-custom-content ant-message-success"
        >
          <span
            aria-label="check-circle"
            class="anticon anticon-check-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="check-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
              />
            </svg>
          </span>
          <span>
            导入License成功
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/License/ImportLicenseModal render snap when change license file success with error code 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal basic-modal-wrapper css-vvpsbb"
          role="dialog"
          style="width: 1000px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                导入许可信息
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal"
              >
                <div
                  class="ant-form-item ant-form-item-has-success"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="file"
                        title="License文件"
                      >
                        License文件
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-upload-wrapper"
                          >
                            <div
                              class="ant-upload ant-upload-select"
                            >
                              <span
                                class="ant-upload"
                                role="button"
                                tabindex="0"
                              >
                                <input
                                  accept=""
                                  aria-required="true"
                                  id="file"
                                  style="display: none;"
                                  type="file"
                                />
                                <button
                                  class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                                  type="button"
                                >
                                  <span>
                                    选择文件上传
                                  </span>
                                </button>
                              </span>
                            </div>
                            <div
                              class="ant-upload-list ant-upload-list-text"
                            >
                              <div
                                class="ant-upload-list-item-container"
                              >
                                <div
                                  class="ant-upload-list-item ant-upload-list-item-undefined"
                                >
                                  <div
                                    class="ant-upload-icon"
                                  >
                                    <span
                                      aria-label="paper-clip"
                                      class="anticon anticon-paper-clip"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="paper-clip"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="64 64 896 896"
                                        width="1em"
                                      >
                                        <path
                                          d="M779.3 196.6c-94.2-94.2-247.6-94.2-341.7 0l-261 260.8c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0012.7 0l261-260.8c32.4-32.4 75.5-50.2 121.3-50.2s88.9 17.8 121.2 50.2c32.4 32.4 50.2 75.5 50.2 121.2 0 45.8-17.8 88.8-50.2 121.2l-266 265.9-43.1 43.1c-40.3 40.3-105.8 40.3-146.1 0-19.5-19.5-30.2-45.4-30.2-73s10.7-53.5 30.2-73l263.9-263.8c6.7-6.6 15.5-10.3 24.9-10.3h.1c9.4 0 18.1 3.7 24.7 10.3 6.7 6.7 10.3 15.5 10.3 24.9 0 9.3-3.7 18.1-10.3 24.7L372.4 653c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0012.7 0l215.6-215.6c19.9-19.9 30.8-46.3 30.8-74.4s-11-54.6-30.8-74.4c-41.1-41.1-107.9-41-149 0L463 364 224.8 602.1A172.22 172.22 0 00174 724.8c0 46.3 18.1 89.8 50.8 122.5 33.9 33.8 78.3 50.7 122.7 50.7 44.4 0 88.8-16.9 122.6-50.7l309.2-309C824.8 492.7 850 432 850 367.5c.1-64.6-25.1-125.3-70.7-170.9z"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                  <span
                                    class="ant-upload-list-item-name"
                                    title="test.txt"
                                  >
                                    test.txt
                                  </span>
                                  <span
                                    class="ant-upload-list-item-actions"
                                  >
                                    <button
                                      class="ant-btn ant-btn-text ant-btn-sm ant-btn-icon-only ant-upload-list-item-action"
                                      title="删除文件"
                                      type="button"
                                    >
                                      <span
                                        class="ant-btn-icon"
                                      >
                                        <span
                                          aria-label="delete"
                                          class="anticon anticon-delete"
                                          role="img"
                                          tabindex="-1"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="delete"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </button>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
              <div
                class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  >
                    <div
                      class="ant-table ant-table-empty ant-table-scroll-horizontal"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="min-width: 100%; table-layout: auto;"
                          >
                            <colgroup />
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  名称
                                </th>
                                <th
                                  class="ant-table-cell ellipsis-column-width"
                                  scope="col"
                                >
                                  限制
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-placeholder"
                              >
                                <td
                                  class="ant-table-cell"
                                  colspan="2"
                                >
                                  <div
                                    class="ant-table-expanded-row-fixed"
                                    style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                  />
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
                type="button"
              >
                <span>
                  提 交
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/License/ImportLicenseModal render snap when change license file success with error code 2`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal basic-modal-wrapper css-vvpsbb"
          role="dialog"
          style="width: 1000px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                导入许可信息
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal"
              >
                <div
                  class="ant-form-item ant-form-item-has-success"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="file"
                        title="License文件"
                      >
                        License文件
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-upload-wrapper"
                          >
                            <div
                              class="ant-upload ant-upload-select"
                            >
                              <span
                                class="ant-upload"
                                role="button"
                                tabindex="0"
                              >
                                <input
                                  accept=""
                                  aria-required="true"
                                  id="file"
                                  style="display: none;"
                                  type="file"
                                />
                                <button
                                  class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                                  type="button"
                                >
                                  <span>
                                    选择文件上传
                                  </span>
                                </button>
                              </span>
                            </div>
                            <div
                              class="ant-upload-list ant-upload-list-text"
                            >
                              <div
                                class="ant-upload-list-item-container"
                              >
                                <div
                                  class="ant-upload-list-item ant-upload-list-item-undefined"
                                >
                                  <div
                                    class="ant-upload-icon"
                                  >
                                    <span
                                      aria-label="paper-clip"
                                      class="anticon anticon-paper-clip"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="paper-clip"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="64 64 896 896"
                                        width="1em"
                                      >
                                        <path
                                          d="M779.3 196.6c-94.2-94.2-247.6-94.2-341.7 0l-261 260.8c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0012.7 0l261-260.8c32.4-32.4 75.5-50.2 121.3-50.2s88.9 17.8 121.2 50.2c32.4 32.4 50.2 75.5 50.2 121.2 0 45.8-17.8 88.8-50.2 121.2l-266 265.9-43.1 43.1c-40.3 40.3-105.8 40.3-146.1 0-19.5-19.5-30.2-45.4-30.2-73s10.7-53.5 30.2-73l263.9-263.8c6.7-6.6 15.5-10.3 24.9-10.3h.1c9.4 0 18.1 3.7 24.7 10.3 6.7 6.7 10.3 15.5 10.3 24.9 0 9.3-3.7 18.1-10.3 24.7L372.4 653c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0012.7 0l215.6-215.6c19.9-19.9 30.8-46.3 30.8-74.4s-11-54.6-30.8-74.4c-41.1-41.1-107.9-41-149 0L463 364 224.8 602.1A172.22 172.22 0 00174 724.8c0 46.3 18.1 89.8 50.8 122.5 33.9 33.8 78.3 50.7 122.7 50.7 44.4 0 88.8-16.9 122.6-50.7l309.2-309C824.8 492.7 850 432 850 367.5c.1-64.6-25.1-125.3-70.7-170.9z"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                  <span
                                    class="ant-upload-list-item-name"
                                    title="test.txt"
                                  >
                                    test.txt
                                  </span>
                                  <span
                                    class="ant-upload-list-item-actions"
                                  >
                                    <button
                                      class="ant-btn ant-btn-text ant-btn-sm ant-btn-icon-only ant-upload-list-item-action"
                                      title="删除文件"
                                      type="button"
                                    >
                                      <span
                                        class="ant-btn-icon"
                                      >
                                        <span
                                          aria-label="delete"
                                          class="anticon anticon-delete"
                                          role="img"
                                          tabindex="-1"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="delete"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </button>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
              <div
                class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-empty ant-table-scroll-horizontal"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="min-width: 100%; table-layout: auto;"
                          >
                            <colgroup />
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  名称
                                </th>
                                <th
                                  class="ant-table-cell ellipsis-column-width"
                                  scope="col"
                                >
                                  限制
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-placeholder"
                              >
                                <td
                                  class="ant-table-cell"
                                  colspan="2"
                                >
                                  <div
                                    class="ant-table-expanded-row-fixed"
                                    style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                  />
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
                type="button"
              >
                <span>
                  提 交
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/License/ImportLicenseModal render snap when closed modal 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal basic-modal-wrapper css-vvpsbb"
          role="dialog"
          style="width: 1000px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                导入许可信息
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal"
              >
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="file"
                        title="License文件"
                      >
                        License文件
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-upload-wrapper"
                          >
                            <div
                              class="ant-upload ant-upload-select"
                            >
                              <span
                                class="ant-upload"
                                role="button"
                                tabindex="0"
                              >
                                <input
                                  accept=""
                                  aria-required="true"
                                  id="file"
                                  style="display: none;"
                                  type="file"
                                />
                                <button
                                  class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                                  type="button"
                                >
                                  <span>
                                    选择文件上传
                                  </span>
                                </button>
                              </span>
                            </div>
                            <div
                              class="ant-upload-list ant-upload-list-text"
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
              <div
                class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-empty ant-table-scroll-horizontal"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="min-width: 100%; table-layout: auto;"
                          >
                            <colgroup />
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  名称
                                </th>
                                <th
                                  class="ant-table-cell ellipsis-column-width"
                                  scope="col"
                                >
                                  限制
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-placeholder"
                              >
                                <td
                                  class="ant-table-cell"
                                  colspan="2"
                                >
                                  <div
                                    class="ant-table-expanded-row-fixed"
                                    style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                  />
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
                type="button"
              >
                <span>
                  提 交
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
